--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,10 +9,12 @@ services:
     image: confluentinc/cp-kafka
     ports:
       - 29092:29092
+    expose:
+      - 29092
     depends_on:
       - zookeeper
     environment:
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:29092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092
       - KAFKA_BROKER_ID=1
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:32181
@@ -20,6 +22,67 @@ services:
     image: redis
     ports:
       - 6379:6379
+    expose:
+      - 6379
+  postgres:
+    image: postgres:11-alpine
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    expose:
+      - 5432
+    ports:
+      - 5432:5432
+  rails:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.rails
+    volumes:
+      - ..:/app
+    command: rails server --binding 0.0.0.0
+    ports:
+      - 3000:3000
+    depends_on:
+      - postgres
+  resque:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.rails
+    volumes:
+      - ..:/app
+    command: rake environment resque:work
+    environment:
+      QUEUE: '*'
+      REDIS_URL: "redis://mcom-redis:6379"
+    depends_on:
+      - postgres
+      - mcom-redis
+  racecar:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.rails
+    volumes:
+      - ..:/app
+    command: racecar JobCreatorConsumer
+    environment:
+      KAFKA_BROKER_HOST: kafka
+      REDIS_URL: "redis://mcom-redis:6379"
+    depends_on:
+      - kafka
+      - mcom-redis
+      - postgres
+  notification-send:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.rails
+    volumes:
+      - ..:/app
+    command: "rake notifications:send"
+    environment:
+      KAFKA_BROKER_HOST: kafka
+    depends_on:
+      - kafka
+      - postgres
 
   # consumer:
   #   build: ./consumer
