--- a/openshift/Jenkins/Dockerfile
+++ b/openshift/Jenkins/Dockerfile
@@ -20,7 +20,8 @@ gcc-c++ \
 make \
 libxml2-devel \
 patch \
-postgresql-devel" && \
+postgresql-devel \
+qt5-qtwebkit-devel" && \
     yum install -y --setopt=tsflags=nodocs ${INSTALL_PKGS} && \
     yum clean all -y && \
     rpm -V ${INSTALL_PKGS}
