--- a/config/resque.yml
+++ b/config/resque.yml
@@ -1,3 +1,8 @@
-development: <%= ENV['REDIS_URL'] || 'localhost:6379' %>
-test: <%= ENV['REDIS_URL'] || 'localhost:6379' %>
-production: <%= ENV['REDIS_URL'] %>
+<% redis_service = ENV.fetch('REDIS_SERVICE_NAME','').upcase.sub('-', '_') %>
+<% redis_port = ENV['REDIS_PORT'] || 6379 %>
+<% redis_host = ENV["#{redis_service}_SERVICE_HOST"] || 'localhost' %>
+
+development: <%= ENV['REDIS_URL'] || "#{redis_host}:#{redis_port}" %>
+test: <%= ENV['REDIS_URL'] || "#{redis_host}:#{redis_port}" %>
+production: <%= ENV['REDIS_URL'] || "#{redis_host}:#{redis_port}" %>
+
