--- a/config/resque.yml
+++ b/config/resque.yml
@@ -1,8 +1,11 @@
 <% redis_service = ENV.fetch('REDIS_SERVICE_NAME','').upcase.sub('-', '_') %>
 <% redis_port = ENV['REDIS_PORT'] || 6379 %>
 <% redis_host = ENV["#{redis_service}_SERVICE_HOST"] || 'localhost' %>
+<% redis_auth = ENV['REDIS_PASSWORD'] ? "user:#{ENV['REDIS_PASSWORD']}@" : '' %>
 
-development: <%= ENV['REDIS_URL'] || "#{redis_host}:#{redis_port}" %>
-test: <%= ENV['REDIS_URL'] || "#{redis_host}:#{redis_port}" %>
-production: <%= ENV['REDIS_URL'] || "#{redis_host}:#{redis_port}" %>
+<% redis_url = "redis://#{redis_auth}#{redis_host}:#{redis_port}" %>
+
+development: <%= ENV['REDIS_URL'] || redis_url %>
+test: <%= ENV['REDIS_URL'] || redis_url %>
+production: <%= ENV['REDIS_URL'] || redis_url %>
 
