--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,4 @@ before_script:
 script:
   - bundle exec rake rubocop
   - bundle exec rake test:validate
+  - bundle exec rake check:matching_docs
