Add resque-scheduler to process retries
We have to use a version from git until authors release a version with support
for resque 2.0.

https://github.com/resque/resque-scheduler/issues/664

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -74,6 +74,22 @@ services:
     depends_on:
       - postgres
       - mcom-redis
+  resque-scheduler:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.rails
+    volumes:
+      - ..:/app
+    command: bin/rake environment resque:scheduler
+    environment:
+      REDIS_SERVICE_NAME: mcom-redis
+      REDIS_PASSWORD: redispass
+      MCOM_REDIS_SERVICE_HOST: mcom-redis
+    env_file:
+      - postgres.env
+    depends_on:
+      - postgres
+      - mcom-redis
   racecar:
     build:
       context: ..
