--- a/docker/Dockerfile.rails
+++ b/docker/Dockerfile.rails
@@ -1,7 +1,7 @@
 FROM fedora:29
 RUN dnf install -y curl git gcc gcc-c++ make openssl bzip2 findutils openssl-devel readline-devel \
                    zlib-devel sqlite-devel ruby ruby-devel rubygem-bundler redhat-rpm-config rubygem-unf_ext \
-                   postgresql-devel
+                   postgresql-devel npm
 
 ENV RAILS_ENV development
 
