--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "notifications-backend",
-  "version": "0.0.1",
   "dependencies": {
     "swagger2openapi": "^5.2.5"
   },
   "scripts": {
-    "swagger2openapi": "swagger2openapi -o swagger/v1/openapi.json swagger/v1/swagger.json"
+    "swagger2openapi": "swagger2openapi --verbose --debug --indent '  ' swagger/v1/swagger.json -o swagger/v1/openapi.json"
   }
 }
