--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
 
 install:
   - bundle install
+  - npm install
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
@@ -26,3 +27,4 @@ script:
   - bundle exec rake rubocop
   - bundle exec rake test:validate
   - bundle exec rake check:matching_docs
+  - npm run swagger2openapi
