--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -113,6 +113,7 @@ services:
       - kafka
       - mcom-redis
       - postgres
+    restart: on-failure
   # consumer:
   #   build: ./consumer
   #   image: consumer:latest
